--- a/index.html
+++ b/index.html
@@ -5,49 +5,79 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>HTML</title>
-  
-  <!-- HTML -->
-  
+  <title>Live Code Editor</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-<header>Live HTML / CSS / JS [code editor]</header>
-<main>
-    <div class="editor">
-        <div class="label">HTML</div>
-        <textarea id="htmlCode" placeholder="Type HTML here..."><h1>Hello World</h1></textarea>
+<body class="bg-dark text-light">
+
+<header class="bg-secondary text-center py-3 fs-4 fw-bold">
+  Live HTML / CSS / JS [Code Editor]
+</header>
+
+<main class="container-fluid p-3">
+  <div class="row g-3">
+    <div class="col-md-4">
+      <div class="card bg-dark border-light h-100">
+        <div class="card-header">HTML</div>
+        <div class="card-body p-0">
+          <textarea id="htmlCode" class="form-control bg-dark text-light border-0" rows="12" placeholder="Type HTML here..."><h1>Hello World</h1></textarea>
+        </div>
+      </div>
     </div>
-    <div class="editor">
-        <div class="label">CSS</div>
-        <textarea id="cssCode" placeholder="Type CSS here...">h1 { color: red; }</textarea>
+
+    <div class="col-md-4">
+      <div class="card bg-dark border-light h-100">
+        <div class="card-header">CSS</div>
+        <div class="card-body p-0">
+          <textarea id="cssCode" class="form-control bg-dark text-light border-0" rows="12" placeholder="Type CSS here...">h1 { color: red; }</textarea>
+        </div>
+      </div>
     </div>
-    <div class="editor">
-        <div class="label">JS</div>
-        <textarea id="jsCode" placeholder="Type JavaScript here...">console.log('Hello from JS');</textarea>
+
+    <div class="col-md-4">
+      <div class="card bg-dark border-light h-100">
+        <div class="card-header">JS</div>
+        <div class="card-body p-0">
+          <textarea id="jsCode" class="form-control bg-dark text-light border-0" rows="12" placeholder="Type JavaScript here...">console.log('Hello from JS');</textarea>
+        </div>
+      </div>
     </div>
-    <iframe id="preview"></iframe>
+  </div>
+
+  <div class="mt-3">
+    <div class="card border-light">
+      <div class="card-header">Preview</div>
+      <div class="card-body p-0">
+        <iframe id="preview" class="w-100" style="height:300px;"></iframe>
+      </div>
+    </div>
+  </div>
 </main>
+
+<!-- Bootstrap JS Bundle -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
 function updatePreview() {
-    const html = document.getElementById("htmlCode").value;
-    const css = "<style>" + document.getElementById("cssCode").value + "</style>";
-    const js = "<script>" + document.getElementById("jsCode").value + "<\/script>";
-    const previewFrame = document.getElementById("preview").contentWindow.document;
-    previewFrame.open();
-    previewFrame.write(html + css + js);
-    previewFrame.close();
+  const html = document.getElementById("htmlCode").value;
+  const css = "<style>" + document.getElementById("cssCode").value + "</style>";
+  const js = "<script>" + document.getElementById("jsCode").value + "<\/script>";
+  const previewFrame = document.getElementById("preview").contentWindow.document;
+  previewFrame.open();
+  previewFrame.write(html + css + js);
+  previewFrame.close();
 }
 
 document.querySelectorAll("textarea").forEach(area => {
-    area.addEventListener("input", updatePreview);
+  area.addEventListener("input", updatePreview);
 });
 
 updatePreview();
 </script>
 </body>
-
 </html>
